# xylo

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yaml
src/: main.rs
src/cli/: args.rs
src/config/: base.rs  common.rs  mod.rs
src/config/destinations/: base.rs  gdrive.rs  local.rs  s3.rs  scp.rs
src/config/sources/: base.rs  local.rs  pgsql.rs
src/core/: archive.rs  common.rs  env.rs  mod.rs
src/core/pull/: base.rs  create.rs  local.rs  pgsql.rs
src/core/push/: base.rs  create.rs  gdrive.rs  local.rs  s3.rs  scp.rs
src/utils/: command.rs  hash.rs  log.rs  mod.rs
test/: test.json  test.yaml
