[package]
name = "xylo"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.2", features = ["derive"] }
colored = "2.0.0"
dotenv-parser = "0.1.3"
nanoid = "0.4.0"
path-absolutize = "3.0.13"
regex = "1.6.0"
rust-s3 = { version = "0.32.3", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.13"

[profile.release]
strip = true
lto = true
codegen-units = 1
